# teledumper

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Pipfile  README.md  pyproject.toml
src/telegram_file_exporter/: main.py
