[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teledumper"
version = "1.3.0"
description = "OSINT-tailored, specialised, message/files exporter for Telegram."
authors = [
    { name = "Leonid Akinin", email = "fatzy@protonmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["telegram", "export", "cli", "file"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "telethon>=1.24.0"
]

[project.urls]
"Homepage" = "https://github.com/fatzyyy/teledumper"
"Source" = "https://github.com/fatzyyy/teledumper"

[project.scripts]
telegram-file-exporter = "teledumper.main:main"

[tool.setuptools.packages.find]
where = ["src"]
